--- a/app/src/main/res/layout-v21/item_view.xml
+++ b/app/src/main/res/layout-v21/item_view.xml
@@ -18,16 +18,44 @@
                 android:id="@+id/textName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:text="name"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textAllCaps="true"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="link"
-                android:textColor="@color/colorPrimary" />
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:text="Descripcion
+"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textImportancia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="Importancia:
+"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textDeadLine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="10dp"
+                android:text="DeadLine"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
