--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.rss.MainActivity">
+    tools:context="com.example.juanf.tareas.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/fab"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="bottom|right|end"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
             android:clickable="true"
-            app:backgroundTint="@android:color/transparent"
             app:srcCompat="@android:drawable/ic_input_add"
+            tools:layout_editor_absoluteX="290dp"
+            tools:layout_editor_absoluteY="441dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/email"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|right|end"
+            android:layout_marginBottom="75dp"
+            android:layout_marginRight="16dp"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/ic_dialog_email"
             tools:layout_editor_absoluteX="290dp"
             tools:layout_editor_absoluteY="441dp" />
 
